changed runner as we need java 8 as minimum